--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,6 +43,9 @@ jobs:
     - name: Install Strip
       run: cmake --install ${{github.workspace}}/build --prefix ${{github.workspace}}/inst --strip
 
+    - name: Deploy
+      run: '"$Qt6_DIR/bin/windeployqt.exe" ${{github.workspace}}/inst/example.exe'
+
     - name: Pack
       working-directory: ${{github.workspace}}/inst
       run: Compress-Archive . binaries.zip
